--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,59 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.container {
+    max-width: 1175px;
+    margin: 20px 150px 20px 150px;
+}
+
+.cardCommon {
+    border: 1px solid black;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    width: 250px;
+    height: 350px;
+    margin-top: 25px;
+    flex-direction: column;
+}
+
+.image {
+    width: 250px;
+    height: 300px;
+    background-repeat: no-repeat;
+    border-radius: 5px;
+}
+
+.cardPerson {
+    border: 1px solid black;
+    border-radius: 5px;
+    display: flex;
+    width: 450px;
+    height: auto;
+    margin-top: 25px;
+    flex-direction: column;
+}
+
+.imagePerson {
+    width: 450px;
+    height: 500px;
+    background-repeat: no-repeat;
+    border-radius: 5px;
+}
+
+.innerCardStyle {
+    padding: 0 10px 0 10px;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
 .alert {
     font-size: 20px;
     text-align: center;
